# passion-sync-v2

./: .env  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
passion_sync/: app.py  db.py  metrics.py  playground.ipynb  settings.py
passion_sync/model/: activity.py  user.py
passion_sync/route/: activity.py  user.py
passion_sync/schema/: activity.py  user.py
passion_sync/service/: activity.py  user.py
