[tool.poetry]
name = "passion-sync-v2"
version = "0.1.0"
description = ""
authors = ["ouoertheo <me@tomeofjamin.net>"]
readme = "README.md"
packages = [
    { include = "passion_sync" }
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.10.6"
fastapi = "^0.115.8"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.38"
pydantic-settings = "^2.8.0"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
uvicorn = "^0.34.0"
prometheus-client = "^0.21.1"
loguru = "^0.7.3"

[tool.poetry.scripts]
passion = "passion_sync.app:main"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
